[metadata]
name = mdenricher
description = A tool for delivering markdown content to different repositories.
author = Kristin Brown
license = Apache 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.6

[options]
packages =
    mdenricher
install_requires =
    requests>=2
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.2 
    pytest-cov>=3.0.0
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    pylint>=2.14.5

[options.package_data]
mdenricher = py.typed

[flake8]
max-line-length = 160

[pylint.FORMAT]
max-line-length = 160

